# Regression-Analysis-2026

./: .gitignore  README.md  data_generator.py  report.md  zhengyue123  zhengyue123.pub
homework/: week04.md
homework/week06/: homework.md
homework/week06/data/: q3_marketing.csv
students/01_waz/src/week02/: bias_comparison.csv  parameter_comparison.csv
students/05_qyz/docs/: week04_report.md  week05_report.md
students/06_zaq/week04/: .gitignore
students/08_zmy/src/: promote.txt
students/09_sx/: main.py  pyproject.toml
students/09_sx/docs/: week01_introduction.txt  week02_report.md  week04_report.md  week05_report.md
students/19_lsk/: main.py  pyproject.toml
students/19_lsk/docs/: week04.md  week05.md
students/21_yyw/: pyproject.toml
students/23_zy/: data_generator.py  main.py  pyproject.toml  simulation.py
students/23_zy/src/: report.md
students/23_zy/src/utils/: linear_model.py  metrics.py  model_selection.py  optimizer.py
students/23_zy/src/week02_simple_regression/: main.py  simulation.py
students/23_zy/src/week04/: main.py  report.md  solvers.py
students/23_zy/src/week05/: data_generator.py  report.md  simulation.py
students/23_zy/src/week06/: main.py  models.py  utils.py
students/23_zy/src/week06其他文件/: models.py.save
students/23_zy/src/week07/: main.py
students/23_zy/week05/: analysis.py  main.py  report.md  simulation.py  simulation_results.npz
students/23_zy/week05_homework/: analysis.py
students/sunxuan/: introduction.md
students/template/: main.py  pyproject.toml
week05/: analysis.py
(+133 files in other folders)
